# sem2_lab5

./: CMakeLists.txt  commands.h  main.c
Graph/: BFS.c  BFS.h  BFS_DFS.c  BFS_DFS.h  Bellman_Ford_algorithm.c  CMakeLists.txt  DFS.c  adjacency_list.c  edge.c  graph.c  graphviz.c  mygraph.h  vertex.c
graph_dialog/: CMakeLists.txt  dialog.h  dialog_functions.c  work_with_data.c
libs/: CMakeLists.txt  FGetLine.c  KGetLine.c  MyMath.c  MyString.c  SortsSearch.c
libs/headers/: Errors.h  FGetLine.h  KGetLine.h  MyMath.h  MyString.h  SortsSearch.h
